--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@ defaults: &defaults
   adapter: mysql
   encoding: utf8
   username: railsadmin
-  password: mjolnir
+  password: *******
   socket: /tmp/mysql.sock
 
 development:
